chore(APK-26): OpenAPI specs clean up with batch 1
