# docs/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   description: "This is API overview"
   version: 0.1.0
@@ -96,7 +96,90 @@ paths:
                 assets:
                   $ref: "#/components/schemas/Item"
         "400":
-          description: Invalid status value
+          description: Invalid status value 
+  /locations:
+    post:
+      tags:
+        - location
+      summary: Create new location (Czteropak)
+      description: ""
+      requestBody:
+        content:
+          application/json:
+            schema:
+                type: object
+                properties:
+                  name:
+                    type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Location"
+        "400":
+          description: Invalid payload
+        "409":
+          description: Name already taken
+  # TODO 
+  /locations/{locationID}/assets: 
+    get:
+      summary: Get list of assets and stock items in given location to-refactor path
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  assets:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Item"
+                  stock_items:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Stock"
+        "500":
+          description: todo error handling
+          $ref: "#/components/responses/DefaultError"
+  /locations/{locationID}:
+    delete:
+      summary: Remove location by ID
+      parameters:
+        - in: path
+          name: locationID
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the location
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Location deleted successfully
+        "409":
+          $ref: "#/components/responses/DefaultError"
+        "500":
+          $ref: "#/components/responses/DefaultError"
+
+  /transfers:
+    post:
+      tags:
+        - transfer
+      summary: Register transfer
+      description: Create transfer of items
+      requestBody:
+        $ref: "#/components/requestBodies/TransferRequest"
+        required: true
   /users:
     post:
       tags:
@@ -126,8 +209,6 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                assets:
                   $ref: "#/components/schemas/User"
 servers:
   - url: pyrhouse-backend-f26ml.ondigitalocean.app
@@ -137,6 +218,13 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT # optional, arbitrary value for 
+  responses:
+    DefaultError:
+      description: Operation failed location has stock/assets already
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Error"
   requestBodies:
     ItemRequest:
       content:
@@ -147,6 +235,32 @@ components:
                 type: string
               category_id:
                 type: string
+    TransferRequest:
+      content:
+        application/json:
+          schema:
+            properties:
+              from_location_id:
+                type: string
+                example: 1
+                required: true
+                description: origin location
+              location_id:
+                type: string
+                example: 1
+                required: true
+                description: desired location, invalid name-to fix
+              serialized_item_collection:
+                type: array
+                items:
+                  type: integer
+                  format: int64
+                  example: [1, 2, 3]
+              unserialized_item_collection:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UnserializedItem"
+
     UserCreateRequest:
       content:
         application/json:
@@ -201,6 +315,14 @@ components:
           default: false
       xml:
         name: Order
+    Error:
+      type: object
+      properties:
+        error:
+          type: string
+          example: Could not delete location
+        details:
+          type: string
     Item:
       type: object
       properties:
@@ -209,7 +331,16 @@ components:
         serial:
           type: string
         category:
-          type: string
+          $ref: "#/components/schemas/ItemCategory"
+    Stock:
+      type: object
+      properties:
+        id:
+          type: integer
+        category:
+          $ref: "#/components/schemas/ItemCategory"
+        quantity:
+          type: integer
     ItemCategory:
       type: object
       properties:
@@ -217,10 +348,19 @@ components:
           type: integer
         type:
           type: string
-          description: "example: laptop"       
+          example: laptop       
         label:
           type: string
-          description: "example: Laptop"
+          example: Laptop
+    Location:
+      type: object
+      properties:
+        id: 
+          type: integer
+          example: 3
+        name:
+          type: string
+          example: "Gzdaczroom"
     User:
       type: object
       properties:
@@ -235,6 +375,15 @@ components:
 #           type: string
         role:
           type: string
+    UnserializedItem:
+      type: object
+      properties:
+        category_id:
+          type: integer
+          example: 4
+        quantity:
+          type: integer
+          example: 99
     UserRequest:
       type: object
       properties:
