# internal/locations/handler.go
@@ -90,7 +90,7 @@ func (h *LocationHandler) RemoveLocation(c *gin.Context) {
 	err := h.Repository.RemoveLocation(c.Param("id"))
 
 	if _, ok := err.(*custom_error.ForeignKeyViolationError); ok {
-		c.AbortWithStatusJSON(http.StatusConflict, gin.H{"error": "Could not delete location, location", "details": err.Error()})
+		c.AbortWithStatusJSON(http.StatusConflict, gin.H{"error": "Could not delete location", "details": err.Error()})
 		return
 	} else if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": "Could not delete location", "details": err.Error()})
